Small warning fixes